--- a/library-manager/resources/scss/_buttons.scss
+++ b/library-manager/resources/scss/_buttons.scss
@@ -10,6 +10,11 @@
     font-size: 1.125rem;
     border-radius: 6px;
     transition: background-color 0.3s ease-in-out;
+
+    @include respond-to(small) {
+        padding: 0.75rem 1rem;
+        font-size: 1rem;
+    }
 }
 
     .btn-warning {
@@ -46,4 +51,9 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
+
+    @include respond-to(small) {
+        flex-direction: column;
+        gap: 0.25rem;
+    }
 }
