--- a/library-manager/resources/scss/_navbar.scss
+++ b/library-manager/resources/scss/_navbar.scss
@@ -3,16 +3,24 @@
 
 .navbar {
     background-color: $primary-color;
-    padding: 0;
+    padding: 1rem;
     margin: 0;
     width: 100%;
+    max-width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
     box-sizing: border-box;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition: all 0.3s ease-in-out;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
 
     .navbar-wrapper {
         width: 100%;
@@ -28,6 +36,7 @@
         font-size: 1.4rem;
         font-weight: bold;
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+        transition: color 0.2s;
 
         &:hover {
             color: $link-hover-color;
@@ -36,6 +45,14 @@
 
         @include respond-to(small) {
             font-size: 1.2rem;
+        }
+
+        @include respond-to(medium) {
+            font-size: 1.3rem;
+        }
+
+        @include respond-to(large) {
+            font-size: 1.6rem;
         }
     }
 
@@ -69,6 +86,10 @@
         flex-direction: column;
         width: 100%;
         justify-content: flex-end;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: $primary-color;
 
         &.show {
             display: flex;
@@ -77,17 +98,24 @@
         @include respond-to(medium) {
             display: flex;
             flex-direction: row;
+            position: relative;
+            background-color: transparent;
             width: auto;
             justify-content: flex-end;
+            flex-basis: auto;
         }
     }
 
     .navbar-nav {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
+        flex-grow: 1;
 
         @include respond-to(medium) {
             flex-direction: row;
+            align-items: center;
+            flex-grow: 0;
         }
 
         .nav-item {
@@ -114,11 +142,34 @@
                     font-size: 1.1rem;
                     padding: 0.4rem 0.8rem;
                 }
+
+                @include respond-to(medium) {
+                    font-size: 1.3rem;
+                    padding: 0.3rem 0.6rem;
+                }
+
+                @include respond-to(large) {
+                    font-size: 1.3rem;
+                    padding: 0.6rem 1rem;
+                }
             }
         }
     }
 
     @include respond-to(small) {
         padding: 0.5rem;
+
+        .navbar-collapse {
+            padding: 1rem 0;
+        }
+
+        .navbar-nav .nav-item {
+            text-align: center;
+            width: 100%;
+        }
+    }
+
+    @include respond-to(medium) {
+        padding: 0.50rem;
     }
 }
